--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
     <h1>FRONTEND TASKS</h1>
 
     <ul class="taskA">
-      <li><a href="a1.html">A1</a></li>
-      <li><a href="a2.html">A2</a></li>
-      <li><a href="a3.html">A3</a></li>
-      <li><a href="a4.html">A4</a></li>
+      <li><a href="A\a1.html">A1</a></li>
+      <li><a href="A\a2.html">A2</a></li>
+      <li><a href="A\a3.html">A3</a></li>
+      <li><a href="A\a4.html">A4</a></li>
     </ul>
   </body>
 </html>
