--- a/A/a3.html
+++ b/A/a3.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-
+<div class="container">
    <div class="hi">HI!</div> 
 
     <div class="flex1">
@@ -27,6 +27,6 @@
         <div class="menubar2"></div>
         <div class="menubar3"></div>
     </div>
-
+    </div>
   </body>
 </html>
