--- a/A/a4.html
+++ b/A/a4.html
@@ -10,9 +10,20 @@
 </head>
 
 <body>
-    <div id="menu">
+    <div class="menu">
         <div class="menubar1"></div>
         <div class="menubar2"></div>
         <div class="menubar3"></div>
     </div>
+
+    <div id="container">
+        <div id="halfclip">
+            <div class="halfcircle" id="clipped">
+            </div>
+        </div>
+        <div class="halfcircle" id="fixed">
+        </div>
+    </div>
+    
+    
 </body>
