--- a/index.html
+++ b/index.html
@@ -37,5 +37,11 @@
       <li><a href="A/a3.html">A3</a></li>
       <li><a href="A/a4.html">A4</a></li>
     </ul>
+    <ul class="taskB">
+      <li><a href="B/a1.html">B1</a></li>
+      <li><a href="B/a2.html">B2</a></li>
+      <li><a href="B/a3.html">B3</a></li>
+      <li><a href="B/a4.html">B4</a></li>
+    </ul>
   </body>
 </html>
