--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
       font-size: 40px;
     }
 
-    .taskA li {
+    .task li {
         font-size: 25px;
         line-height: 45px;
     }
 
-    .taskA li a{
+    .task li a{
         text-decoration: none;
         color: black;
     }
@@ -31,17 +31,17 @@
   <body>
     <h1>FRONTEND TASKS</h1>
 
-    <ul class="taskA">
+    <ul class="task">
       <li><a href="A/a1.html">A1</a></li>
       <li><a href="A/a2.html">A2</a></li>
       <li><a href="A/a3.html">A3</a></li>
       <li><a href="A/a4.html">A4</a></li>
     </ul>
-    <ul class="taskB">
-      <li><a href="B/a1.html">B1</a></li>
-      <li><a href="B/a2.html">B2</a></li>
-      <li><a href="B/a3.html">B3</a></li>
-      <li><a href="B/a4.html">B4</a></li>
+    <ul class="task">
+      <li><a href="B/b1.html">B1</a></li>
+      <li><a href="B/b2.html">B2</a></li>
+      <li><a href="B/b3.html">B3</a></li>
+      <li><a href="B/b4.html">B4</a></li>
     </ul>
   </body>
 </html>
